nw-services/05-vpn-gateway.tf
# Create a public IP for the VPN Gateway
resource "azurerm_public_ip" "vpngw" {
  name                = "${var.rg_prefix}-vpngw-pubip"
  resource_group_name = azurerm_resource_group.rg.name
  location            = azurerm_resource_group.rg.location
  allocation_method   = "Dynamic"
  sku                 = "Basic"

  tags = var.tags
}

# Create VPN Gateway
resource "azurerm_virtual_network_gateway" "vpngw" {
  name                = "${var.rg_prefix}-vpngw"
  location            = azurerm_resource_group.rg.location
  resource_group_name = azurerm_resource_group.rg.name

  type     = "Vpn"
  vpn_type = "RouteBased"

  active_active = false
  enable_bgp    = false
  sku           = "VpnGw1"
  generation    = "Generation1"

  ip_configuration {
    name                          = "vnetGatewayConfig"
    public_ip_address_id          = azurerm_public_ip.vpngw.id
    private_ip_address_allocation = "Dynamic"
    subnet_id                     = azurerm_subnet.gwsubnet.id
  }

  vpn_client_configuration {
    address_space = ["172.22.200.0/23"]

    root_certificate {
      name             = "DHL-Root-CA-1"
      public_cert_data = <<EOF
MIIDXzCCAkegAwIBAgILBAAAAAABIVhTCKIwDQYJKoZIhvcNAQELBQAwTDEgMB4G
[...]
WD9f
EOF
    }
    root_certificate {
      name             = "DHL-Root-CA-2"
      public_cert_data = <<EOF
MIIEpDCCA4ygAwIBAgIQeAMYWGakf/vHAnBwTN6H/zANBgkqhkiG9w0BAQsFADBM
[...]
wc862flXphovvp2NvYM3XNYHL3fofbJeWev0+JT+Bt2HKYn3VibObA==
EOF
    }
  }

  lifecycle {
    ignore_changes = [
      vpn_client_configuration
    ]
  }

  tags = var.tags

}
